#pragma once
#include "Entity.h"
#include "Animation.h"
#include "ExplosionConfig.h"
#include <memory>

class Explosion : public Entity {
private:
    float lifetime;
    int attackPower;
    float hitboxW;
    float hitboxH;
    bool isActive = true;
    Entity* spawner;
    std::unique_ptr<Animation> animation;
    std::function<void(Entity*)> onHitEffect;
    int hitboxStartFrame;
    int hitboxEndFrame;
    float hitboxOffsetX = 0.0f;
    float hitboxOffsetY = 0.0f;

public:
    Explosion(Vector2 startPos, bool isFacingRight, const ExplosionConfig& config, Entity* spawner);

    void update(float dt) override;
    void render(float alpha) override;

    bool hasActiveHitbox() const override;
    Hitbox getActiveHitbox() override;
    Rectangle getOffsetHitbox() const;

    void onHitWall(bool isRightWall, bool isCliff = false) override {}
    void onCollide(Entity& other) override {}
    void takeDamage(int damage, float knockbackDirX = 0.0f, bool forceInterrupt = true) override {}

    bool getIsActive() const override { return isActive; }
    void deactivate() override { isActive = false; }
};
