@startuml entities_architecture
' Super Mario Plus - entity hierarchy and ownership
' Verified against the source tree at commit b378acb.
' Matches: include/entity/Entity.h and everything under include/entity/

title Entity Hierarchy — what lives in the world

skinparam classAttributeIconSize 0

abstract class Entity {
  # CharacterBaseStats baseStats
  # CharacterRuntimeStats runtimeStats
  # CharacterWorldStats worldStats
  # CommandQueue* commandQueue
  # string iid_
  # vector<unique_ptr<IEffect>> activeEffects
  # EntityFaction faction
  --
  + {abstract} update(float dt)
  + {abstract} render(float alpha)
  + updatePhysicsWithMap(TileMap&, solids, float)
  + takeDamage(int, float dirX, bool interrupt)
  + getHitbox() : Rectangle
  + hasActiveHitbox() : bool
  + getActiveHitbox() : Hitbox
  .. Template Method hooks ..
  + onLand(float)
  + onHitWall(bool, bool)
  + onHitCeiling(float)
  + onEnterWater()
  + onExitLiquid()
  + onOverlapLadder()
  + onHazard()
  + onDie()
}
note right of Entity
  updatePhysicsWithMap fixes the order:
   triggers -> ledge/liquid -> gravity
   -> resolve X -> resolve Y
  Subclasses only override the hooks.
end note

class Player {
  - PlayerState* currentState
  - map<string, unique_ptr<ISkill>> skillList
  - shared_ptr<PartyInventory> partyInventory_
  - BuffManager buffManager_
  - BaseItem* overlappingItem_
  + requestState(PlayerState&)
  + forceState(PlayerState&)
  + useSkill(string)
  + useStoredItem()
  + createSaveData() : PlayerSaveData
  + restoreFromSaveData(PlayerSaveData)
}
note left of Player
  The ten PlayerState objects are held
  BY VALUE as members, so a transition
  is a pointer assignment with no
  allocation.
end note

class Mob {
  - unique_ptr<IMobState> currentState
  - vector<unique_ptr<IEnemySkill>> enemySkills
  - vector<Player*> targetPlayers
  - MobConfig config
  - bool isDead
  + changeState(unique_ptr<IMobState>)
  + decideAction()
  + process()
  + getClosestPlayer() : Player*
}
note right of Mob
  Contrast with Player: the current
  behaviour is heap-allocated per
  transition, because many enemies
  exist and each uses few behaviours.
end note

class Boss {
  - string cutsceneId
  - bool isWaitingForCutscene
  + onCutsceneStart(string)
  + onCutsceneEnd(string)
}

abstract class BaseItem {
  # ItemState itemState_
  # map<ItemState, AtlasAnimation> animations_
  + onInteract(Entity&)
  + forceInteract(Entity&)
  + getSolidRect() : Rectangle
  + getItemState() : ItemState
}

class Fireball {
  - Entity* spawner
  - float curveAmplitude
  - float curveFrequency
}
class Explosion {
  - Entity* spawner
  - function<void(Entity*)> onHitEffect
}

class Coin
class Key
class Door
class Flag
class LuckyBlock
class ChestNormal
class ChestBoss
class Spring
class Boom
class PoisonFlask
class Buff
class ShopAsset
class EndgameAsset

Entity <|-- Player
Entity <|-- Mob
Entity <|-- BaseItem
Entity <|-- Fireball
Entity <|-- Explosion
Mob <|-- Boss

BaseItem <|-- Coin
BaseItem <|-- Key
BaseItem <|-- Door
BaseItem <|-- Flag
BaseItem <|-- LuckyBlock
BaseItem <|-- ChestNormal
BaseItem <|-- ChestBoss
BaseItem <|-- Spring
BaseItem <|-- Boom
BaseItem <|-- PoisonFlask
BaseItem <|-- Buff
BaseItem <|-- ShopAsset
BaseItem <|-- EndgameAsset

Fireball ..> Entity : spawner (raw, non-owning)
Explosion ..> Entity : spawner (raw, non-owning)
Mob ..> Player : targets (raw, non-owning)

@enduml
